--- a/src/main/resources/templates/front/swift/entityListViewModel.mustache
+++ b/src/main/resources/templates/front/swift/entityListViewModel.mustache
@@ -34,7 +34,7 @@ self.user = user
 self.username = user.username!
 }
 
-var filtered{{entityLowerCase}}s: [{{entity}}] {
+var filtered{{entity}}s: [{{entity}}] {
     entities
         .filter { $0.deletedAt == nil }
         {{#header}}
