--- a/src/main/resources/templates/front/swift/entityListView.mustache
+++ b/src/main/resources/templates/front/swift/entityListView.mustache
@@ -148,12 +148,12 @@ var body: some View {
 }
 
      private func resetSheets() {
-            showForm = false
+           /* showForm = false
             selectedForDuplicate = nil
             selectedForDetails = nil
             selectedForDelete = nil
             {{#header}}show{{headerUpperCase}}Picker = false
-            {{/header}}
+            {{/header}}*/
         }
 
 
