--- a/src/main/resources/templates/front/swift/entityPickerView.mustache
+++ b/src/main/resources/templates/front/swift/entityPickerView.mustache
@@ -19,6 +19,7 @@ struct {{entity}}PickerView: View {
     var body: some View {
         NavigationView {
             VStack {
+              {{#hasType}}
                 Picker("Type", selection: $selectedFilter) {
                     ForEach({{entity}}Type.allCases, id: \.self) { type in
                         Text(type.rawValue.capitalized).tag(type)
@@ -26,6 +27,8 @@ struct {{entity}}PickerView: View {
                 }
                 .pickerStyle(SegmentedPickerStyle())
                 .padding()
+
+                 {{/hasType}}
 
                 List {
                     Section {
